# tinker-atropos

./: README.md  launch_training.py  pyproject.toml  serve.py
configs/: default.yaml  math.yaml  quick_test.yaml  usage.md
tinker_atropos/: config.py  interfaces.py  metrics_tracker.py  simple_metrics.py  trainer.py  types.py
tinker_atropos/environments/: gsm8k_tinker.py  math_server.py
tinker_atropos/inference/: server.py  wrapper.py
tinker_atropos/tests/: test_logprob_alignment.py  test_wrapper_manual.py
tinker_atropos/training/: data_processing.py  trainer.py
tinker_atropos/utils/: download_weights.py
